--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/frameLayout"
-    tools:context=".ui.activities.MainActivity">
+    tools:context=".presentation.activities.MainActivity">
 
 </FrameLayout>
