--- a/app/src/main/res/layout/fragment_sports_layout.xml
+++ b/app/src/main/res/layout/fragment_sports_layout.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.SportsFragment"
+    tools:context=".presentation.fragments.SportsFragment"
     android:background="@color/darkBlue">
 
     <androidx.recyclerview.widget.RecyclerView
