--- a/app/src/main/res/layout/layout_event_item.xml
+++ b/app/src/main/res/layout/layout_event_item.xml
@@ -33,7 +33,8 @@
         android:layout_width="@dimen/dp_0"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_8"
-        android:padding="@dimen/dp_5"
+        android:paddingTop="@dimen/dp_5"
+        android:paddingHorizontal="@dimen/dp_5"
         tools:text="000000000"
         android:ellipsize="end"
         android:maxLines="1"
@@ -43,6 +44,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/favoriteImgV" />
+
+    <TextView
+        android:id="@+id/vsTxtV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/dp_2"
+        tools:text="vs"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textSize="@dimen/sp_8"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/teamOneTxtV"/>
 
     <TextView
         android:id="@+id/teamtwoTxtV"
@@ -58,6 +74,6 @@
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/teamOneTxtV" />
+        app:layout_constraintTop_toBottomOf="@+id/vsTxtV" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
