Add favorite functionality

--- a/app/src/main/res/layout/layout_sport_item.xml
+++ b/app/src/main/res/layout/layout_sport_item.xml
@@ -24,6 +24,13 @@
             android:textColor="@color/white"
             tools:text="FOOTBALL"/>
 
+        <Switch
+            android:id="@+id/switchV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/sportIcon"/>
+
         <ImageView
             android:id="@+id/sportIcon"
             android:layout_width="wrap_content"
@@ -37,7 +44,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/sportItemRV"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:padding="@dimen/dp_10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
